--- a/app/index.html
+++ b/app/index.html
@@ -15,7 +15,7 @@
             <div class="sidebar-heading border-bottom bg-light">Start Bootstrap</div>
             <div class="list-group list-group-flush">
                 <a class="list-group-item list-group-item-action list-group-item-light p-3" href="index.html">Home</a>
-                <a class="list-group-item list-group-item-action list-group-item-light p-3" href="list.html">List</a>
+                <a class="list-group-item list-group-item-action list-group-item-light p-3" href="list-products.html">List Products</a>
             </div>
         </div>
         <!-- Page content wrapper-->
@@ -31,7 +31,7 @@
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav ms-auto mt-2 mt-lg-0">
                             <li class="nav-item active"><a class="nav-link" href="index.html">Home</a></li>
-                            <li class="nav-item"><a class="nav-link" href="#!">Messages</a></li>
+                            <li class="nav-item"><a class="nav-link" href="list-products.html">List Products</a></li>
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button"
                                     data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Your Name</a>
